fixes issue 38344: Restart tomcat 8.0 through MMC using JDK9 is not working
  The "tomcat.restart.do" task used to restart tomcat from MMC is starting tomcat with the -Djava.endorsed.dirs= system property setting. The endorsed feature is no longer supported with Java 9[1] and we are not making use of it with previous JDKs. For this reason we are directly removing it.

[1] https://docs.oracle.com/javase/9/migrate/toc.htm#JSMIG-GUID-8E83E51A-88A3-4E9A-8E2A-66E1D66A966C

--HG--
extra : amend_source : e0de49f08a14b97fc5dea56faac4f9759d9e8414