@@ -821,7 +821,6 @@ export.database: exports database structure and data to xml files.
       <jvmarg line="${env.CATALINA_OPTS}" />
       <jvmarg value="-Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager" />
       <jvmarg value="-Djava.util.logging.config.file=${env.CATALINA_BASE}/conf/logging.properties" />
-      <jvmarg value="-Djava.endorsed.dirs=${env.CATALINA_HOME}/endorsed" />
       <jvmarg value="-Dcatalina.base=${env.CATALINA_BASE}" />
       <jvmarg value="-Dcatalina.home=${env.CATALINA_HOME}" />
       <jvmarg value="-Djava.io.tmpdir=${env.CATALINA_BASE}/temp" />
